FX settlement tests

--- a/UnitTests/CMakeLists.txt
+++ b/UnitTests/CMakeLists.txt
@@ -50,10 +50,9 @@ INCLUDE_DIRECTORIES( ${BS_NETWORK_INCLUDE_DIR} )
 INCLUDE_DIRECTORIES( ${COMMON_LIB_INCLUDE_DIR} )
 INCLUDE_DIRECTORIES( ${CRYPTO_LIB_INCLUDE_DIR} )
 INCLUDE_DIRECTORIES( ${WALLET_LIB_INCLUDE_DIR} )
-
 INCLUDE_DIRECTORIES( ${BS_COMMUNICATION_INCLUDE_DIR} )
 INCLUDE_DIRECTORIES( ${PATH_TO_GENERATED} )
-
+INCLUDE_DIRECTORIES( ${BLOCK_SETTLE_ROOT}/Core )
 INCLUDE_DIRECTORIES( ${NETTY_INCLUDE_DIR} )
 INCLUDE_DIRECTORIES( ${BS_COMMON_ENUMS_INCLUDE_DIR} )
 INCLUDE_DIRECTORIES( ${BS_TERMINAL_API_INCLUDE_DIR} )
@@ -70,6 +69,7 @@ TARGET_COMPILE_DEFINITIONS( ${UNIT_TESTS} PRIVATE
 )
 
 TARGET_LINK_LIBRARIES( ${UNIT_TESTS}
+   ${TERMINAL_CORE_NAME}
    ${BLOCKSETTLE_UI_LIBRARY_NAME}
    ${CPP_WALLET_LIB_NAME}
    ${BS_NETWORK_LIB_NAME}
