--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -335,6 +335,10 @@ INCLUDE_DIRECTORIES( ${QRENCODE_INCLUDE_DIR} )
 SET(SPDLOG_INCLUDE_DIR ${THIRD_PARTY_COMMON_DIR}/SPDLog/include)
 INCLUDE_DIRECTORIES( ${SPDLOG_INCLUDE_DIR} )
 
+# add JSON
+SET(JSON_INCLUDE_DIR ${THIRD_PARTY_COMMON_DIR}/JSON/single_include)
+INCLUDE_DIRECTORIES( ${JSON_INCLUDE_DIR} )
+
 # setup libbtc
 SET(LIBBTC_PACKAGE_ROOT ${THIRD_PARTY_COMMON_DIR}/libbtc)
 SET(LIBBTC_LIB_DIR ${LIBBTC_PACKAGE_ROOT}/lib)
