Add missing copyright headers

--- a/GUI/QtWidgets/CMakeLists.txt
+++ b/GUI/QtWidgets/CMakeLists.txt
@@ -1,3 +1,14 @@
+#
+#
+# ***********************************************************************************
+# * Copyright (C) 2020 - 2021, BlockSettle AB
+# * Distributed under the GNU Affero General Public License (AGPL v3)
+# * See LICENSE or http://www.gnu.org/licenses/agpl.html
+# *
+# **********************************************************************************
+#
+#
+
 CMAKE_MINIMUM_REQUIRED(VERSION 3.3)
 
 PROJECT(${TERMINAL_GUI_QT_NAME})
