BIP39 wallet import/create support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -407,6 +407,7 @@ SET( BS_NETWORK_INCLUDE_DIR ${TERMINAL_GUI_ROOT}/common/BlocksettleNetworkingLib
 SET( COMMON_UI_LIB_INCLUDE_DIR ${TERMINAL_GUI_ROOT}/CommonUI )
 SET( COMMON_LIB_INCLUDE_DIR ${TERMINAL_GUI_ROOT}/common/CommonLib )
 SET( BS_HW_LIB_INCLUDE_DIR ${TERMINAL_GUI_ROOT}/BlockSettleHW )
+SET( BIP39_INCLUDE_DIR ${TERMINAL_GUI_ROOT}/common/WalletsLib/bip39 )
 
 SET(MDB_DIR ${CRYPTO_LIB_DIR}/lmdb/libraries/liblmdb)
 
@@ -832,10 +833,10 @@ ADD_SUBDIRECTORY(common/WalletsLib)
 ADD_SUBDIRECTORY(common/cppForSwig)
 ADD_SUBDIRECTORY(common/CommonLib)
 ADD_SUBDIRECTORY(CommonUI)
-ADD_SUBDIRECTORY(BlockSettleHW)
+#ADD_SUBDIRECTORY(BlockSettleHW)
 
 ADD_SUBDIRECTORY(BlockSettleApp)
-ADD_SUBDIRECTORY(BlockSettleSigner)
+#ADD_SUBDIRECTORY(BlockSettleSigner)
 
 IF(BUILD_TESTS)
    ADD_SUBDIRECTORY(UnitTests)
