--- a/BlockSettleUILib/CMakeLists.txt
+++ b/BlockSettleUILib/CMakeLists.txt
@@ -60,6 +60,7 @@ INCLUDE_DIRECTORIES( ${COMMON_LIB_INCLUDE_DIR} )
 INCLUDE_DIRECTORIES( ${COMMON_UI_LIB_INCLUDE_DIR} )
 INCLUDE_DIRECTORIES( Settings )
 INCLUDE_DIRECTORIES( Trading )
+INCLUDE_DIRECTORIES( ${BIP39_INCLUDE_DIR} )
 
 foreach(RESOURCE_FILE ${RESOURCE_FILES})
 	qt5_add_resources( GENERATED_RESOURCES ${RESOURCE_FILE})
