[LEV-2522] Optional QtQuick GUI (now empty)

--- a/BlockSettleApp/CMakeLists.txt
+++ b/BlockSettleApp/CMakeLists.txt
@@ -49,6 +49,7 @@ ENDIF ()
 TARGET_LINK_LIBRARIES( ${BLOCKSETTLE_APP_NAME}
    ${TERMINAL_CORE_NAME}
    ${TERMINAL_GUI_QT_NAME}
+   ${TERMINAL_GUI_QTQUICK_NAME}
    ${BLOCKSETTLE_UI_LIBRARY_NAME}
    ${BS_NETWORK_LIB_NAME}
    ${CPP_WALLET_LIB_NAME}
