--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -164,6 +164,7 @@ FIND_PACKAGE(Qt5Widgets REQUIRED)
 FIND_PACKAGE(Qt5Network REQUIRED)
 FIND_PACKAGE(Qt5PrintSupport REQUIRED)
 FIND_PACKAGE(Qt5Qml REQUIRED)
+FIND_PACKAGE(Qt5QmlWorkerScript REQUIRED)
 FIND_PACKAGE(Qt5Quick REQUIRED)
 FIND_PACKAGE(Qt5QuickControls2 REQUIRED)
 FIND_PACKAGE(Qt5Charts REQUIRED)
@@ -391,6 +392,7 @@ SET( BLOCKSETTLE_APP_NAME              blocksettle )
 SET( SIGNER_APP_NAME                   blocksettle_signer )
 SET( TERMINAL_CORE_NAME                TerminalCore )
 SET( TERMINAL_GUI_QT_NAME              TerminalGUI_Qt )
+SET( TERMINAL_GUI_QTQUICK_NAME         TerminalGUI_QtQuick )
 SET( BLOCKSETTLE_UI_LIBRARY_NAME       bsuilib )
 SET( BLOCKSETTLE_HW_LIBRARY_NAME       HWIntegrations )
 SET( CRYPTO_LIB_NAME                   ArmoryCryptoLib )
