--- a/GUI/CMakeLists.txt
+++ b/GUI/CMakeLists.txt
@@ -1,7 +1,7 @@
 #
 #
 # ***********************************************************************************
-# * Copyright (C) 2020 - 2021, BlockSettle AB
+# * Copyright (C) 2020 - 2022, BlockSettle AB
 # * Distributed under the GNU Affero General Public License (AGPL v3)
 # * See LICENSE or http://www.gnu.org/licenses/agpl.html
 # *
@@ -10,3 +10,4 @@
 #
 
 ADD_SUBDIRECTORY(QtWidgets)
+ADD_SUBDIRECTORY(QtQuick)
