Linux build fixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -187,6 +187,7 @@ INCLUDE_DIRECTORIES(${Qt5Sql_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${Qt5Svg_INCLUDE_DIRS})
 
 IF ( UNIX AND NOT APPLE )
+   add_compile_options(-fPIC)
    FIND_PACKAGE(Qt5DBus REQUIRED)
    ADD_DEFINITIONS( "-DBS_USE_DBUS" )
    INCLUDE_DIRECTORIES(${Qt5DBus_INCLUDE_DIRS})
