Import dialogs plugin

--- a/BlockSettleHW/CMakeLists.txt
+++ b/BlockSettleHW/CMakeLists.txt
@@ -57,19 +57,13 @@ FUNCTION(GENERATE_PROTO IN_DIR OUT_DIR)
       SET(PROTO_SOURCE_FILES ${PROTO_SOURCE_FILES} ${PROTO_SOURCE_FILE})
       SET(PROTO_HEADER_FILES ${PROTO_HEADER_FILES} ${PROTO_HEADER_FILE})
 
-      ADD_CUSTOM_COMMAND(OUTPUT ${PROTO_SOURCE_FILE}
-                         OUTPUT ${PROTO_HEADER_FILE}
-                         DEPENDS ${PROTO_FILE}
-                         COMMAND ${PROTOBUF_PROTOC_EXECUTABLE} ${PROTO_FILE} --cpp_out=${OUT_DIR} --proto_path=${IN_DIR}
-                         WORKING_DIRECTORY ${BLOCKSETTLE_HW_ROOT}
-      )
+      EXECUTE_PROCESS(COMMAND ${PROTOBUF_PROTOC_EXECUTABLE} ${PROTO_FILE} --cpp_out ${OUT_DIR} -I ${IN_DIR} --proto_path ${IN_DIR})
    ENDFOREACH(PROTO_FILE)
 
    SET(GENERATED_SOURCE_FILES ${GENERATED_SOURCE_FILES} ${PROTO_SOURCE_FILES} PARENT_SCOPE)
    SET(GENERATED_HEADER_FILES ${GENERATED_HEADER_FILES} ${PROTO_HEADER_FILES} PARENT_SCOPE)
 
    SET(GENERATED_INCLUDE_DIRS ${GENERATED_INCLUDE_DIRS} ${OUT_DIR} PARENT_SCOPE)
-
 ENDFUNCTION(GENERATE_PROTO)
 
 GENERATE_PROTO("${THIRD_PARTY_COMMON_DIR}/trezorCommon" "${BLOCKSETTLE_HW_ROOT}/trezor/generated_proto")
@@ -86,5 +80,3 @@ TARGET_LINK_LIBRARIES(${BLOCKSETTLE_HW_LIBRARY_NAME}
    Qt5::Network
    ${OS_SPECIFIC_LIBS}
 )
-
-
