--- a/BlockSettleApp/CMakeLists.txt
+++ b/BlockSettleApp/CMakeLists.txt
@@ -48,6 +48,7 @@ ENDIF ()
 
 TARGET_LINK_LIBRARIES( ${BLOCKSETTLE_APP_NAME}
    ${TERMINAL_CORE_NAME}
+#   ${BLOCKSETTLE_HW_LIBRARY_NAME}
    ${TERMINAL_GUI_QT_NAME}
    ${TERMINAL_GUI_QTQUICK_NAME}
    ${BLOCKSETTLE_UI_LIBRARY_NAME}
