--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -481,10 +481,12 @@ IF(WIN32)
 
          LIST(APPEND QT_QUICK_LIBS
             ${QT5_QML_ROOT}/QtQml/Models.2/modelsplugind.lib
+            ${QT5_QML_ROOT}/QtQml/qmlplugind.lib
             ${QT5_QML_ROOT}/QtQuick.2/qtquick2plugind.lib
             ${QT5_QML_ROOT}/QtQuick/Controls/qtquickcontrolsplugind.lib
             ${QT5_QML_ROOT}/QtQuick/Controls.2/qtquickcontrols2plugind.lib
             ${QT5_QML_ROOT}/QtQuick/Dialogs/dialogplugind.lib
+            ${QT5_QML_ROOT}/QtQuick/Dialogs/Private/dialogsprivateplugind.lib
             ${QT5_QML_ROOT}/QtQuick/Layouts/qquicklayoutsplugind.lib
             ${QT5_QML_ROOT}/QtQuick/Templates.2/qtquicktemplates2plugind.lib
             ${QT5_QML_ROOT}/QtQuick/Window.2/windowplugind.lib
@@ -532,10 +534,12 @@ IF(WIN32)
 
          LIST(APPEND QT_QUICK_LIBS
             ${QT5_QML_ROOT}/QtQml/Models.2/modelsplugin.lib
+            ${QT5_QML_ROOT}/QtQml/qmlplugin.lib
             ${QT5_QML_ROOT}/QtQuick.2/qtquick2plugin.lib
             ${QT5_QML_ROOT}/QtQuick/Controls/qtquickcontrolsplugin.lib
             ${QT5_QML_ROOT}/QtQuick/Controls.2/qtquickcontrols2plugin.lib
             ${QT5_QML_ROOT}/QtQuick/Dialogs/dialogplugin.lib
+            ${QT5_QML_ROOT}/QtQuick/Dialogs/Private/dialogsprivateplugin.lib
             ${QT5_QML_ROOT}/QtQuick/Layouts/qquicklayoutsplugin.lib
             ${QT5_QML_ROOT}/QtQuick/Templates.2/qtquicktemplates2plugin.lib
             ${QT5_QML_ROOT}/QtQuick/Window.2/windowplugin.lib
@@ -614,10 +618,12 @@ ELSE(WIN32)
          )
          SET(QT_QUICK_LIBS
             ${QT5_QML_ROOT}/QtQml/Models.2/libmodelsplugin_debug.a
+            ${QT5_QML_ROOT}/QtQml/libqmlplugin_debug.a
             ${QT5_QML_ROOT}/QtQuick.2/libqtquick2plugin_debug.a
             ${QT5_QML_ROOT}/QtQuick/Controls/libqtquickcontrolsplugin_debug.a
             ${QT5_QML_ROOT}/QtQuick/Controls.2/libqtquickcontrols2plugin_debug.a
-            ${QT5_QML_ROOT}/QtQuick/Dialogs/libdialogplugin_debug.lib
+            ${QT5_QML_ROOT}/QtQuick/Dialogs/libdialogplugin_debug.a
+            ${QT5_QML_ROOT}/QtQuick/Dialogs/Private/libdialogsprivateplugin_debug.a
             ${QT5_QML_ROOT}/QtQuick/Layouts/libqquicklayoutsplugin_debug.a
             ${QT5_QML_ROOT}/QtQuick/Templates.2/libqtquicktemplates2plugin_debug.a
             ${QT5_QML_ROOT}/QtQuick/Window.2/libwindowplugin_debug.a
@@ -652,10 +658,12 @@ ELSE(WIN32)
          )
          SET(QT_QUICK_LIBS
             ${QT5_QML_ROOT}/QtQml/Models.2/libmodelsplugin.a
+            ${QT5_QML_ROOT}/QtQml/libqmlplugin.a
             ${QT5_QML_ROOT}/QtQuick.2/libqtquick2plugin.a
             ${QT5_QML_ROOT}/QtQuick/Controls/libqtquickcontrolsplugin.a
             ${QT5_QML_ROOT}/QtQuick/Controls.2/libqtquickcontrols2plugin.a
             ${QT5_QML_ROOT}/QtQuick/Dialogs/libdialogplugin.a
+            ${QT5_QML_ROOT}/QtQuick/Dialogs/Private/libdialogsprivateplugin.a
             ${QT5_QML_ROOT}/QtQuick/Layouts/libqquicklayoutsplugin.a
             ${QT5_QML_ROOT}/QtQuick/Templates.2/libqtquicktemplates2plugin.a
             ${QT5_QML_ROOT}/QtQuick/Window.2/libwindowplugin.a
@@ -744,10 +752,12 @@ ELSE(WIN32)
 
          SET(QT_QUICK_LIBS
             ${QT5_QML_ROOT}/QtQml/Models.2/libmodelsplugin.a
+            ${QT5_QML_ROOT}/QtQml/libqmlplugin.a
             ${QT5_QML_ROOT}/QtQuick.2/libqtquick2plugin.a
             ${QT5_QML_ROOT}/QtQuick/Controls/libqtquickcontrolsplugin.a
             ${QT5_QML_ROOT}/QtQuick/Controls.2/libqtquickcontrols2plugin.a
             ${QT5_QML_ROOT}/QtQuick/Dialogs/libdialogplugin.a
+            ${QT5_QML_ROOT}/QtQuick/Dialogs/Private/libdialogsprivateplugin.a
             ${QT5_QML_ROOT}/QtQuick/PrivateWidgets/libwidgetsplugin.a
             ${QT5_QML_ROOT}/QtQuick/Layouts/libqquicklayoutsplugin.a
             ${QT5_QML_ROOT}/QtQuick/Templates.2/libqtquicktemplates2plugin.a
