[WIP] hardware wallets implementation

--- a/BlockSettleHW/CMakeLists.txt
+++ b/BlockSettleHW/CMakeLists.txt
@@ -11,6 +11,7 @@
 PROJECT( ${BLOCKSETTLE_HW_LIBRARY_NAME} )
 
 SET(BLOCKSETTLE_HW_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
+ADD_DEFINITIONS(-DBUILD_HW_WALLETS)
 
 file(COPY ${THIRD_PARTY_COMMON_DIR}/hidapi/hidapi.h
     DESTINATION ${BLOCKSETTLE_HW_ROOT}/ledger/hidapi)
@@ -34,6 +35,8 @@ FILE(GLOB HEADERS
 INCLUDE_DIRECTORIES( ${WALLET_LIB_INCLUDE_DIR} )
 INCLUDE_DIRECTORIES( ${BS_NETWORK_INCLUDE_DIR} )
 INCLUDE_DIRECTORIES( ${COMMON_LIB_INCLUDE_DIR} )
+INCLUDE_DIRECTORIES(${BLOCK_SETTLE_ROOT}/Core)
+INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIR})
 
 if (UNIX)
     INCLUDE_DIRECTORIES( ${LIBUSB_INCLUDE_DIR} )
