--- a/BlockSettleApp/CMakeLists.txt
+++ b/BlockSettleApp/CMakeLists.txt
@@ -19,6 +19,7 @@ INCLUDE_DIRECTORIES( ${BLOCKSETTLE_UI_INCLUDE_DIR} )
 INCLUDE_DIRECTORIES( ${BS_NETWORK_INCLUDE_DIR} )
 INCLUDE_DIRECTORIES( ${BS_COMMON_ENUMS_INCLUDE_DIR} )
 INCLUDE_DIRECTORIES( ${BS_COMMUNICATION_INCLUDE_DIR} )
+INCLUDE_DIRECTORIES( ${BS_HW_LIB_INCLUDE_DIR} )
 INCLUDE_DIRECTORIES( ${WALLET_LIB_INCLUDE_DIR} )
 INCLUDE_DIRECTORIES( ${CRYPTO_LIB_INCLUDE_DIR} )
 INCLUDE_DIRECTORIES( ${BOTAN_INCLUDE_DIR} )
@@ -48,11 +49,12 @@ ENDIF ()
 
 TARGET_LINK_LIBRARIES( ${BLOCKSETTLE_APP_NAME}
    ${TERMINAL_CORE_NAME}
-#   ${BLOCKSETTLE_HW_LIBRARY_NAME}
+   ${BLOCKSETTLE_HW_LIBRARY_NAME}
    ${TERMINAL_GUI_QT_NAME}
    ${TERMINAL_GUI_QTQUICK_NAME}
    ${BLOCKSETTLE_UI_LIBRARY_NAME}
    ${BS_NETWORK_LIB_NAME}
+   ${CURL_LIB}
    ${CPP_WALLET_LIB_NAME}
    ${CRYPTO_LIB_NAME}
    ${BOTAN_LIB}
