--- a/GUI/QtQuick/CMakeLists.txt
+++ b/GUI/QtQuick/CMakeLists.txt
@@ -13,10 +13,10 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.3)
 
 PROJECT(${TERMINAL_GUI_QTQUICK_NAME})
 
-FILE(GLOB SOURCES
+FILE(GLOB_RECURSE SOURCES
    *.cpp
 )
-FILE(GLOB HEADERS
+FILE(GLOB_RECURSE HEADERS
    *.h
 )
 
