--- a/GUI/QtQuick/CMakeLists.txt
+++ b/GUI/QtQuick/CMakeLists.txt
@@ -35,6 +35,7 @@ INCLUDE_DIRECTORIES(${Qt5Network_INCLUDE_DIRS} )
 INCLUDE_DIRECTORIES(${Qt5Qml_INCLUDE_DIRS} )
 INCLUDE_DIRECTORIES(${Qt5DBus_INCLUDE_DIRS} )
 INCLUDE_DIRECTORIES(${Qt5Charts_INCLUDE_DIRS} )
+INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIR})
 
 qt5_add_resources(GENERATED_RESOURCES qtquick.qrc)
 
