--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -174,6 +174,7 @@ FIND_PACKAGE(Qt5QuickControls2 REQUIRED)
 FIND_PACKAGE(Qt5Charts REQUIRED)
 FIND_PACKAGE(Qt5Sql REQUIRED)
 FIND_PACKAGE(Qt5Svg REQUIRED)
+FIND_PACKAGE(Qt5SerialPort REQUIRED)
 
 INCLUDE_DIRECTORIES(${Qt5Core_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${Qt5Gui_INCLUDE_DIRS})
