--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,7 +64,7 @@ ENDIF (PRODUCTION_BUILD)
 # Force 64-bit builds and min target for macOS. If the min target changes,
 # update generate.py too.
 if(APPLE)
-	set(CMAKE_OSX_DEPLOYMENT_TARGET 10.12 CACHE STRING "" FORCE)
+	set(CMAKE_OSX_DEPLOYMENT_TARGET 10.15 CACHE STRING "" FORCE)
 	set(CMAKE_OSX_ARCHITECTURES "x86_64" CACHE STRING "macOS architecture to build; 64-bit is expected" FORCE)
 endif(APPLE)
 
@@ -341,22 +341,22 @@ IF( NOT LIBCP_LIB)
 ENDIF()
 INCLUDE_DIRECTORIES( ${LIBCP_INCLUDE_DIR} )
 
-SET(MPIR_PACKAGE_ROOT ${THIRD_PARTY_COMMON_DIR}/mpir)
-SET(MPIR_LIB_DIR ${MPIR_PACKAGE_ROOT}/lib)
-IF (WIN32)
-   SET(MPIR_LIB_NAME mpir)
-ELSE(WIN32)
-#   SET(MPIR_LIB_DIR ${MPIR_PACKAGE_ROOT}/lib)
-   IF(BSTERMINAL_SHARED_LIBS)
-      SET(MPIR_LIB_NAME libgmp.so)
-   ELSE()
-      SET(MPIR_LIB_NAME libgmp.a)
-   ENDIF()
-ENDIF(WIN32)
-FIND_LIBRARY(MPIR_LIB NAMES ${MPIR_LIB_NAME} PATHS ${MPIR_LIB_DIR})
-IF( NOT MPIR_LIB)
-   MESSAGE( FATAL_ERROR "Could not find MPIR lib in ${MPIR_LIB_DIR}")
-ENDIF()
+#SET(MPIR_PACKAGE_ROOT ${THIRD_PARTY_COMMON_DIR}/mpir)
+#SET(MPIR_LIB_DIR ${MPIR_PACKAGE_ROOT}/lib)
+#IF (WIN32)
+#   SET(MPIR_LIB_NAME mpir)
+#ELSE(WIN32)
+##   SET(MPIR_LIB_DIR ${MPIR_PACKAGE_ROOT}/lib)
+#   IF(BSTERMINAL_SHARED_LIBS)
+#      SET(MPIR_LIB_NAME libgmp.so)
+#   ELSE()
+#      SET(MPIR_LIB_NAME libgmp.a)
+#   ENDIF()
+#ENDIF(WIN32)
+#FIND_LIBRARY(MPIR_LIB NAMES ${MPIR_LIB_NAME} PATHS ${MPIR_LIB_DIR})
+#IF( NOT MPIR_LIB)
+#   MESSAGE( FATAL_ERROR "Could not find MPIR lib in ${MPIR_LIB_DIR}")
+#ENDIF()
 
 
 SET(CURL_ROOT        ${THIRD_PARTY_COMMON_DIR}/curl)
