--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -341,22 +341,22 @@ IF( NOT LIBCP_LIB)
 ENDIF()
 INCLUDE_DIRECTORIES( ${LIBCP_INCLUDE_DIR} )
 
-#SET(MPIR_PACKAGE_ROOT ${THIRD_PARTY_COMMON_DIR}/mpir)
-#SET(MPIR_LIB_DIR ${MPIR_PACKAGE_ROOT}/lib)
-#IF (WIN32)
-#   SET(MPIR_LIB_NAME mpir)
+IF (WIN32)
+   SET(MPIR_PACKAGE_ROOT ${THIRD_PARTY_COMMON_DIR}/mpir)
+   SET(MPIR_LIB_DIR ${MPIR_PACKAGE_ROOT}/lib)
+   SET(MPIR_LIB_NAME mpir)
+   FIND_LIBRARY(MPIR_LIB NAMES ${MPIR_LIB_NAME} PATHS ${MPIR_LIB_DIR})
+   IF( NOT MPIR_LIB)
+      MESSAGE( FATAL_ERROR "Could not find MPIR lib in ${MPIR_LIB_DIR}")
+   ENDIF()
 #ELSE(WIN32)
-##   SET(MPIR_LIB_DIR ${MPIR_PACKAGE_ROOT}/lib)
+#   SET(MPIR_LIB_DIR ${MPIR_PACKAGE_ROOT}/lib)
 #   IF(BSTERMINAL_SHARED_LIBS)
 #      SET(MPIR_LIB_NAME libgmp.so)
 #   ELSE()
 #      SET(MPIR_LIB_NAME libgmp.a)
 #   ENDIF()
-#ENDIF(WIN32)
-#FIND_LIBRARY(MPIR_LIB NAMES ${MPIR_LIB_NAME} PATHS ${MPIR_LIB_DIR})
-#IF( NOT MPIR_LIB)
-#   MESSAGE( FATAL_ERROR "Could not find MPIR lib in ${MPIR_LIB_DIR}")
-#ENDIF()
+ENDIF(WIN32)
 
 
 SET(CURL_ROOT        ${THIRD_PARTY_COMMON_DIR}/curl)
