Linux AppImage generation and unordered_map fix for macos Monterey

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,10 @@ add_definitions(-DSTATIC_BUILD)
 add_definitions(-DSPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_DEBUG)
 add_definitions(-DBUILD_WALLETS)
 
+IF(UNIX AND NOT APPLE)
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-rpath='$ORIGIN'")
+ENDIF()
+
 IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
    IF(BSTERMINAL_SHARED_LIBS)
       SET(THIRD_PARTY_BUILD_MODE "debug-shared")
