sergey comment fix https://github.com/BlockSettle/terminal/pull/1105#discussion_r1242644942

--- a/BlockSettleApp/CMakeLists.txt
+++ b/BlockSettleApp/CMakeLists.txt
@@ -61,15 +61,9 @@ IF ( APPLE )
             USES_TERMINAL
         )
     endif ()
- 
-    ELSEIF ( WIN32 )
-    ADD_EXECUTABLE( ${BLOCKSETTLE_APP_NAME} WIN32 ${SOURCES} ${HEADERS} blocksettle.rc )
 
-ELSE ()
+ELSEIF(UNIX AND NOT APPLE)
     ADD_EXECUTABLE( ${BLOCKSETTLE_APP_NAME} ${SOURCES} ${HEADERS} )
-ENDIF ()
-
-IF(UNIX AND NOT APPLE)
     IF(BUILD_APPIMAGE)
         configure_file(../common/build_scripts/CMakeModules/AppImageScript.cmake.in appimage.cmake)
 	ADD_CUSTOM_COMMAND(TARGET ${BLOCKSETTLE_APP_NAME} POST_BUILD
@@ -77,7 +71,15 @@ IF(UNIX AND NOT APPLE)
             COMMAND "${CMAKE_COMMAND}" -P "appimage.cmake"
 	)
     ENDIF()
-ENDIF()
+ 
+ELSEIF ( WIN32 )
+    ADD_EXECUTABLE( ${BLOCKSETTLE_APP_NAME} WIN32 ${SOURCES} ${HEADERS} blocksettle.rc )
+
+ELSE ()
+    ADD_EXECUTABLE( ${BLOCKSETTLE_APP_NAME} ${SOURCES} ${HEADERS} )
+
+ENDIF ()
+
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-rpath='$ORIGIN'")
 
 TARGET_LINK_LIBRARIES( ${BLOCKSETTLE_APP_NAME}
